--- a/src/html/index.html
+++ b/src/html/index.html
@@ -17,21 +17,46 @@
         <div class="task_encompasing_element">
           <div class="task_content_container">
             <header>
-              <article class="header_footer">
-                <section class="header_footer_logo">
-                  <svg height="44" width="42">
-                    <image href="../images/svg/logo.svg" />
+              <section class="header_footer">
+                <article class="header_footer_logo">
+                  <svg class="header_footer_svg">
+                    <image href="../images/svg/logo-strokes;rgb_11_133_110-w_44-h_42.svg" />
                   </svg>
                   <p>PLANNED PLANTHOOD</p>
-                </section>
-                <section class="header_footer_links"></section>
-              </article>
-              <article class="header_main_body">
+                </article>
+                <article class="header_footer_links">
+                  <button class="header_footer_button">HEM</button>
+                  <button class="header_footer_button">HISTORIK</button>
+                  <button class="header_footer_button">TIPS</button>
+                  <button class="header_footer_button">KONTAKT</button>
+                </article>
+              </section>
+              <section class="header_main_body">
                 <h1>Uppskattade växter</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique, corporis ipsum.</p>
-                <img width="42" height="44" src="../images/svg/logo.svg">
-                <section class="header_footer_flowers_collection"></section>
-              </article>
+                <section class="header_main_flowers_border">
+                  <section class="header_main_flowers_collection">
+                    <article class="header_main_flowers_subsidiary_1">
+                        <img src="../images/jpg/coley-christine-GyvMk5pPDXI-unsplash.jpg" class="header_main_flower_img" width="1739" heigth="1391">
+                    </article>
+                    <section class="header_main_flowers_subsidiary_1">
+                      <section class="header_main_flowers_subsidiary_2">
+                        <article class="header_main_flowers_subsidiary_3">
+                          <img src="../images/jpg/ab67616d00001e026a07073faabaaf523a1d3a95.jpg" class="header_main_flower_img" width="300" heigth="300">
+                          <img src="../images/jpg/qtq70fmfjpeg-27.jpg" class="header_main_flower_img" width="900" heigth="1200">
+                        </article>
+                        <img src="../images/jpg/Succulent_Terrarium_1.jpg" class="header_main_flower_img" width="400" heigth="400">
+                      </section>
+                    </section>
+                    <section class="header_main_flowers_subsidiary_1">
+                      <article class="header_main_flowers_subsidiary_2">
+                        <img src="../images/jpg/unsplash-image-tVIqMgGlAG0.jpg" class="header_main_flower_img" width="1000" heigth="667">
+                        <img src="../images/png/img1_wsimg_com-isteam-stock-103535.png" class="header_main_flower_img" width="1925" heigth="1280">
+                      </article>
+                    </section>
+                  </section>
+                </section>
+              </section>
               <article class="header_main_email_contact_encompasing_element"></article>
             </header>
             <main>
