--- a/src/html/index.html
+++ b/src/html/index.html
@@ -32,9 +32,11 @@
                 </article>
               </section>
               <section class="header_main_body">
-                <h1>Uppskattade växter</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique, corporis ipsum.</p>
-                <section class="header_main_flowers_border">
+                <article class="header_main_texts">
+                  <h1>Uppskattade växter</h1>
+                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique, corporis ipsum.</p>
+                </article>
+                  <section class="header_main_flowers_border">
                   <section class="header_main_flowers_collection">
                     <article class="header_main_flowers_subsidiary_1">
                         <img src="../images/jpg/coley-christine-GyvMk5pPDXI-unsplash.jpg" class="header_main_flower_img" width="1739" heigth="1391">
@@ -57,7 +59,19 @@
                   </section>
                 </section>
               </section>
-              <article class="header_main_email_contact_encompasing_element"></article>
+              <section class="header_email">
+                <section class="header_email_newsletter">
+                  <h2 class="header_email_text">Anmäld dig till vårt nyhetsbrev så du inte missar en utsådd!</h2>
+                  <article class="header_email_input">
+                    <input type="email" placeholder="email@domain.com" />
+                    <input type="submit" value="SKICKA">
+                  </article>
+                </section>
+                <svg class="header_email_svg">
+                  <circle />
+                    <image href="../images/svg/icon-planting.svg" />
+                </svg>
+              </section>
             </header>
             <main>
             </main>
