Gjort klart den sista delen av main-body

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -63,17 +63,39 @@
                 <section class="header_email_newsletter">
                   <h2 class="header_email_text">Anmäld dig till vårt nyhetsbrev så du inte missar en utsådd!</h2>
                   <article class="header_email_input">
-                    <input type="email" placeholder="email@domain.com" />
+                    <input type="email" placeholder="            email@domain.com" />
                     <input type="submit" value="SKICKA">
                   </article>
                 </section>
-                <svg class="header_email_svg">
+                <svg class="svg-circle_fill-rgbx11x133x110_stroke-white" title="header_email_svg">
                   <circle />
                     <image href="../images/svg/icon-planting.svg" />
                 </svg>
               </section>
             </header>
             <main>
+              <section class="main_content_field">
+
+              </section>
+              <section class="main_previous_plants">
+                <svg class="svg-circle_fill-rgbx11x133x110_stroke-white" title="main_previous_plants_svg">
+                  <circle />
+                    <image href="../images/svg/icon-seedling-fill;rgb_255_255_255.svg" />
+                </svg>
+                <section class="main_previous_plants_compr">
+                  <article class="main_previous_plants_text">
+                    <h2 class="main_previous_plants_h2">Våra tidigare odlingar</h2>
+                    <p class="main_previous_plants_p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur ratione quia eos pariatur deserunt veritatis. Tenetur, ipsum! Iusto delectus ipsam esse pariatur rerum eveniet nostrum, dolor distinctio nam quaerat doloribus?</p>
+                  </article>
+                  <article class="main_previous_plants_button">
+                    <button>Planterade plantor</button>
+                  </article>
+                </section>
+              </section>
+
+              <article class="main_bottom_border">
+
+              </article>
             </main>
             <footer>
             </footer>
