Lagt till bilder och jobbat mer på fönster paneler

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -75,7 +75,13 @@
             </header>
             <main>
               <section class="main_content_field">
-
+                <section class="main_content_panel" data-type="gurka">
+                  <article class="main_content_panel_picture">
+                    <svg class="main_content_panel_svg">
+                      <image href="../images/svg/icon-seedling-strokes;rgb_200_200_200-sw_8-opc_0.1.svg" />
+                    </svg>
+                  </article>
+                </section>
               </section>
               <section class="main_previous_plants">
                 <svg class="svg-circle_fill-rgbx11x133x110_stroke-white" title="main_previous_plants_svg">
@@ -92,10 +98,8 @@
                   </article>
                 </section>
               </section>
-
-              <article class="main_bottom_border">
-
-              </article>
+              <div class="main_bottom_border">
+              </div>
             </main>
             <footer>
             </footer>
