Jobbar mera på innehållet i main

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -78,7 +78,20 @@
                 <section class="main_content_panel" data-type="gurka">
                   <article class="main_content_panel_picture">
                     <svg class="main_content_panel_svg">
-                      <image href="../images/svg/icon-seedling-strokes;rgb_200_200_200-sw_8-opc_0.1.svg" />
+                      <image href="../images/svg/icon-seedling-strokes;rgb_200_200_200-sw_8-opc_0.25.svg" />
+                    </svg>
+                  </article>
+                  <article class="main_content_panel_tags">
+                  </article>
+                  <article class="main_content_panel_text">
+                  </article>
+                  <article class="main_content_panel_footer">
+                  </article>
+                </section>
+                <section class="main_content_panel" data-type="tomat">
+                  <article class="main_content_panel_picture">
+                    <svg class="main_content_panel_svg">
+                      <image href="../images/svg/icon-seedling-strokes;rgb_200_200_200-sw_8-opc_0.25.svg" />
                     </svg>
                   </article>
                 </section>
