Gjort klart den stora sidan, nu är bara hover länkarna kvar

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -18,17 +18,17 @@
           <div class="task_content_container">
             <header>
               <section class="header_footer">
-                <article class="header_footer_logo">
-                  <svg class="header_footer_svg">
+                <article class="logo_and_title">
+                  <svg class="logo_and_title_svg">
                     <image href="../images/svg/logo-strokes;rgb_11_133_110-w_44-h_42.svg" />
                   </svg>
-                  <p>PLANNED PLANTHOOD</p>
+                  <p>PLANNED <br /> PLANTHOOD</p>
                 </article>
                 <article class="header_footer_links">
-                  <button class="header_footer_button">HEM</button>
-                  <button class="header_footer_button">HISTORIK</button>
-                  <button class="header_footer_button">TIPS</button>
-                  <button class="header_footer_button">KONTAKT</button>
+                  <button class="footer_button" data-type="header-footer">HEM</button>
+                  <button class="footer_button" data-type="header-footer">HISTORIK</button>
+                  <button class="footer_button" data-type="header-footer">TIPS</button>
+                  <button class="footer_button" data-type="header-footer">KONTAKT</button>
                 </article>
               </section>
               <section class="header_main_body">
@@ -487,143 +487,39 @@
               </div>
             </main>
             <footer>
+              <section class="footer_content_field">
+                <section class="footer_content_field_contact_info">
+                  <article class="logo_and_title">
+                    <svg class="logo_and_title_svg">
+                      <image href="../images/svg/logo-strokes;rgb_255_255_255-w_44-h_42.svg" />
+                    </svg>
+                    <p>PLANNED <br /> PLANTHOOD</p>
+                  </article>
+                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, veniam ducimus aut sint atque ullam alias perspiciatis fuga. Consequuntur nesciunt ea corrupti aperiam fugit inventore ratione earum. Iure, eius molestias?</p>
+                  <article class="footer_content_field_contact_option" title="footer_content_field_phone">
+                    <svg class="contact_info_icon" data-type="phone_icon">
+                      <image href="../images/svg/icon-phone.svg" />
+                    </svg>
+                    <p>Telefon: 020-1234567</p>
+                  </article>
+                  <article class="footer_content_field_contact_option" title="footer_content_field_email">
+                    <svg class="contact_info_icon" data-type="email_icon">
+                      <image href="../images/svg/icon-email.svg" />
+                    </svg>
+                    <p>info@plannedplant.com</p>
+                  </article>
+                </section>
+                <section class="footer_content_field_links">
+                  <button class="footer_button" data-type="footer-footer">Hem</button>
+                  <button class="footer_button" data-type="footer-footer">Historik</button>
+                  <button class="footer_button" data-type="footer-footer">Tips</button>
+                  <button class="footer_button" data-type="footer-footer">Kontakt</button>
+                </section>
+              </section>
             </footer>
           </div>
         </div>
       </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <!--
-    Planned Planthood
-
-    Hem
-    Historik
-    Tips
-    Kontakt
-
-    Uppskattade växter
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique, corporis ipsum.
-
-    Anmäl dig till vårt nyhetsbrev så du inte missar en utsådd!
-
-    Blommor
-    Ätbart
-    Grönska
-    Gurka
-    Gurka växer snabbt, är enkel att odla och ger mängder med gurkor, bara man är noga med vattning, omplantering, duschning och gödsling.
-    Coolio
-    2024-04-01
-
-    Solälskande
-    Lättodlat
-    Ätbart
-    Tomat
-    En perfekt grönsak att odla på balkongen eller i trädgården. Ger riklig skörd under sommaren.
-    Anna Odlare
-    2024-12-05
-
-    Dekorativ
-    Färgstark
-    Tålig
-    Blommor
-    Pelargon
-    En vacker och lättskött blomma som trivs både inne och ute under sommaren.
-    Blomsterkalle
-    2024-12-03
-
-    Kryddor
-    Doftande
-    Solälskande
-    Basilika
-    En fantastisk krydda för pastarätter och sallader. Trivs bäst i ett soligt fönster.
-    Krydd-Malin
-    2024-12-07
-
-    Snabbväxande
-    Ätbart
-    Grönska
-    Sallad
-    Sallad är en av de enklaste grönsakerna att odla och ger snabba resultat för färska måltider.
-    Grönis
-    2024-12-06
-
-    Luftfuktande
-    Grönska
-    Dekorativ
-    Ormbunke
-    En klassisk växt som passar perfekt i badrummet eller på skuggiga platser.
-    Naturvännen
-    2024-12-08
-
-    Våra tidigare odlingar
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur ratione quia eos pariatur deserunt veritatis. Tenetur, ipsum! Iusto delectus ipsam esse pariatur rerum eveniet nostrum, dolor distinctio nam quaerat doloribus?
-    Planterade plantor
-
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, veniam ducimus aut sint atque ullam alias perspiciatis fuga. Consequuntur nesciunt ea corrupti aperiam fugit inventore ratione earum. Iure, eius molestias?
-    Telefon: 020-1234567
-    info@plannedplant.com
-
-    Hem
-    Historik
-    Tips
-    Kontakt-->
   </body>
 </html>
